# tz-client

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  flake.nix  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: bandit.yaml  ci.yaml  labeler.yml  lint.yml  production-tests.yaml  pypi_publish.yml  release.yml  test_pypi_publish.yml
docs/: index.md  installation.md  quickstart.md  redoc.html  redoc.md
docs/api-reference/: index.md
docs/client/: api.md  asset.md  asset_collection.md  geometry.md  geospatial.md  model.md  model_scenario.md  node.md  publisher.md  record_collection.md  run.md  scenario.md  source.md  technology.md
docs/data-coverage/power/: assets.md  generation.md
docs/data-coverage/steel/: index.md
docs/stylesheets/: extra.css
feo/client/: __init__.py  asset.py  auth.py  base.py  constants.py  factory.py  geometry.py  geospatial.py  model.py  node.py  publisher.py  record.py  run.py  scenario.py  source.py  technology.py  utils.py
feo/client/api/: __init__.py  aliases.py  assets.py  base.py  client.py  constants.py  geometry.py  geospatial.py  models.py  nodes.py  publishers.py  record.py  records.py  records_api.py  runs.py  scenarios.py  schemas.py  sources.py  technologies.py
feo/client/cli/: __init__.py  auth.py  cli.py
feo/client/core/: logging.py
notebooks/: 01_models.ipynb  02_records.ipynb  03_nodes.ipynb
tests/CI/: conftest.py  test_api_aliases_get.py  test_api_provenance.py  test_api_records.py  test_api_records_get.py  test_api_technology.py  test_asset.py  test_asset_collection_construction.py  test_client_headers.py  test_job.py  test_model.py  test_model_api.py  test_model_scenario.py  test_model_scenario_api.py  test_node.py  test_provenance.py  test_record.py  test_run.py  test_run_api.py  test_scenario.py  test_scenario_api.py  test_technology.py  test_technology_api.py
tests/CI/fixtures/: __init__.py  api_aliases_get.py  api_records_get.py  creates.py  patch_env.py  user.py
transitionzero/client/: __init__.py  asset.py  auth.py  base.py  model.py  node.py  system.py  technology.py  units.py
transitionzero/client/cli/: __init__.py  auth.py
tz/client/: __init__.py  asset.py  auth.py  factory.py  geospatial.py  job.py  model.py  model_scenario.py  node.py  publisher.py  record.py  run.py  scenario.py  source.py  technology.py  utils.py
tz/client/api/: __init__.py  aliases.py  assets.py  base.py  client.py  generated_schema.py  geospatial.py  jobs.py  model_scenarios.py  models.py  node_aliases.py  nodes.py  publishers.py  records.py  runs.py  scenarios.py  schemas.py  sources.py  technologies.py  utils.py
tz/client/cli/: __init__.py  auth.py  cli.py
tz/client/core/: __init__.py
