[tool.poetry]
name = "feo"
version = "0.1.0"
description = "A Python Client for programmatic interactions with the Future Energy Outlook platform by TransitionZero"
readme = "README.md"
license = "LICENSE"
keywords = ["energy", "systems"]
authors = ["Lucas Kruitwagen"]

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">2"
pydantic = ">2"
requests = ">=2.31"
httpx = ">0.25"
click = ">8.1"
shapely = ">1.7.1"

[tool.poetry.dev-dependencies] # Optional
pre-commit = "*"
black = "*"
pytest = "*"
pytest-order = "*"
pytest-asyncio = "*"
pytest-cov = "*"
mypy = "*"
tox = "*"
coverage = "*"
types-requests = "*"
pandas-stubs = "*"
geopandas = "*"


[tool.poetry.urls]  # Optional
"Homepage" = "https://github.com/transitionzero/feo-client"
"Bug Reports" = "https://github.com/transitionzero/feo-client/issues"
"Funding" = "https://transitionzero.org"
"Source" = "https://github.com/transitionzero/feo-client"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[tool.poetry.scripts] # Optional
feo = "feo.client.cli:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
# package-data = {"sample" = ["*.dat"]}

[tool.setuptools.packages]
find = {}


[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--doctest-modules",
    "--doctest-glob=\\*.rst",
    "--import-mode=importlib"
]
testpaths = [
    "tests"
]

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
