[project]
name = "tz-client"
dynamic = ["version"]
description = "A Python Client for programmatic interactions with the platform by TransitionZero"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["energy", "systems"]
authors = [
  {name = "Lucas Kruitwagen", email = "lucas.kruitwagen@gmail.com" },
]

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
]

dependencies = [
  "pandas>2",
  "pydantic>2",
  "requests>=2.31",
  "httpx>0.25",
  "click>8.1",
  "shapely",
]

[project.optional-dependencies] # Optional
dev = [
  "pre-commit",
  "black",
  "pytest",
  "pytest-order",
  "pytest-asyncio",
  "pytest-cov",
  "mypy",
  "tox",
  "coverage",
  "types-requests",
  "pandas-stubs",
  "python-dotenv",
  "datamodel-code-generator",
  "python-dotenv",
  ]

geo = [
  "geopandas",
  ]

[project.urls]  # Optional
"Homepage" = "https://github.com/transition-zero/tz-client"
"Bug Reports" = "https://github.com/transition-zero/tz-client/issues"
"Funding" = "https://transitionzero.org"
"Source" = "https://github.com/transition-zero/tz-client"

# The following would provide a command line executable called `tz`
# which executes the function `main` from this package when invoked.
[project.scripts]  # Optional
tz = "tz.client.cli:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
# package-data = {"sample" = ["*.dat"]}

[tool.setuptools.packages]
find = {}


[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--doctest-modules",
    "--doctest-glob=\\*.rst",
    "--import-mode=importlib"
]
testpaths = [
    "tests"
]

[tool.bandit]
exclude_dirs = ["tests"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
